// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render active style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ xZiga"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render block style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ hYZbaf"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ iUisEq"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with icon 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ ijHdHy"
  >
    <img
      src="test-file-stub"
    />
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ gPPAZc"
  >
    Hello world
  </button>
</DocumentFragment>
`;
